// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept style prop 1`] = `
.emotion-0 {
  width: 100%;
  padding: 1.25rem 0.5rem;
  padding-bottom: 0rem;
  background: red;
}

<div>
  <div
    class="emotion-0"
  >
    Step content
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  padding: 1.25rem 0.5rem;
  padding-bottom: 0rem;
}

<div>
  <div
    class="emotion-0"
  >
    Step content
  </div>
</div>
`;
